syntax = "proto3";

option java_package = "grpc.plannerservice";
option java_multiple_files = true;
option java_outer_classname = "PlannerServiceImpl";

package plannerservice;

// This service provides information to the drivers for planning their trips.
service PlannerService{

	// server streaming
    // Alert users of changes in street situations, such as pedestrian-only on certain days
    // several responses (ex: Monday -> street1 closed, street2 closed)
    rpc GetPedestrianStreets (DayRequest) returns (stream StreetResponse);

}

message DayRequest {
	enum DayOfTheWeek{
		UNKNOWN = 0;
		MONDAY=1;
		TUESDAY=2;
		WEDNESDAY=3;
		THURSDAY=4;
		FRIDAY=5;
		SATURDAY=6;
		SUNDAY=7;
	}
	DayOfTheWeek dayOfTheWeek = 1;

}

message StreetResponse {
	string message = 1;
}
